# rag-lanchain-local-llm

./: build_vector_db.py  cross_encoder_rerank.py  docling.ipynb  document_loader.py  get_embeddings.py  huffingface_langchain_rag.ipynb  main.py  pyproject.toml  requirements.txt  text_splitter.py
