[project]
name = "rag-lanchain-local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "chromadb>=1.0.3",
    "docling>=2.31.0",
    "huggingface-hub[hf-xet]>=0.30.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.1.2",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.ruff]
line-length = 88
